{
  "version": 4,
  "terraform_version": "0.12.1",
  "serial": 65,
  "lineage": "0689d039-64e2-11ee-a092-531469ddaed7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance_arthur",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b45d039456f24807",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-07971d4d10c87f923",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-07971d4d10c87f923",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aeh-terraform",
            "monitoring": false,
            "primary_network_interface_id": "eni-04398609ad660ab0c",
            "private_dns": "ip-10-180-0-120.eu-west-1.compute.internal",
            "private_ip": "10.180.0.120",
            "public_dns": "ec2-63-35-219-209.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.35.219.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-01e292450bc6563db",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b49cca6d98640745",
            "tags": {
              "Name": "arthur-app-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05679b81cd9a326a9"
            ]
          },
          "depends_on": [
            "aws_key_pair.ahusseyKP",
            "aws_security_group.aehussey-sg-app",
            "aws_subnet.aehussey-public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_instance_arthur",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06e660b1f75657eb4",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-030f838fa9d90b611",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-030f838fa9d90b611",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0220460ff38558ae5",
            "private_dns": "ip-10-180-1-237.eu-west-1.compute.internal",
            "private_ip": "10.180.1.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0752a4f867adc1d57",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dce7e17fb539c1f3",
            "tags": {
              "Name": "arthur-db-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f0367d9ad1d27d26"
            ]
          },
          "depends_on": [
            "aws_security_group.aehussey-sg-db",
            "aws_subnet.aehussey-private-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aehussey-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0c2c3587170528f11",
            "owner_id": "135928476890",
            "tags": {
              "Name": "aehussey-VPC-IGW"
            },
            "vpc_id": "vpc-076854025b60a2a30"
          },
          "depends_on": [
            "aws_vpc.aws_vpc_arthur"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aehussey-private-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0358a58c95d2e13d2",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c2c3587170528f11",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aehussey-Private-Subnet-RT"
            },
            "vpc_id": "vpc-076854025b60a2a30"
          },
          "depends_on": [
            "aws_internet_gateway.aehussey-gw",
            "aws_vpc.aws_vpc_arthur"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aehussey-public-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0520a803011a8434c",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c2c3587170528f11",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aehussey-Public-Subnet-RT"
            },
            "vpc_id": "vpc-076854025b60a2a30"
          },
          "depends_on": [
            "aws_internet_gateway.aehussey-gw",
            "aws_vpc.aws_vpc_arthur"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aehussey-db-private-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0319a65f0976043d2",
            "route_table_id": "rtb-0358a58c95d2e13d2",
            "subnet_id": "subnet-0dce7e17fb539c1f3"
          },
          "depends_on": [
            "aws_route_table.aehussey-private-route-table",
            "aws_subnet.aehussey-private-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aehussey-sg-app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-05679b81cd9a326a9",
            "description": "Allow incoming HTTP connections \u0026 SSH access",
            "egress": [],
            "id": "sg-05679b81cd9a326a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "aehussey-sg-app",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aehussey-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-076854025b60a2a30"
          },
          "depends_on": [
            "aws_vpc.aws_vpc_arthur"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aehussey-sg-db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0f0367d9ad1d27d26",
            "description": "Allow incoming HTTP connections \u0026 SSH access",
            "egress": [],
            "id": "sg-0f0367d9ad1d27d26",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.180.0.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc_test_web",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aehussey-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-076854025b60a2a30"
          },
          "depends_on": [
            "aws_vpc.aws_vpc_arthur"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aehussey-private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0dce7e17fb539c1f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.180.1.0/24",
            "id": "subnet-0dce7e17fb539c1f3",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "aehussey-private subnet"
            },
            "vpc_id": "vpc-076854025b60a2a30"
          },
          "depends_on": [
            "aws_vpc.aws_vpc_arthur"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aehussey-public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0b49cca6d98640745",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.180.0.0/24",
            "id": "subnet-0b49cca6d98640745",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "aehussey-public subnet"
            },
            "vpc_id": "vpc-076854025b60a2a30"
          },
          "depends_on": [
            "aws_vpc.aws_vpc_arthur"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws_vpc_arthur",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-076854025b60a2a30",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.180.0.0/16",
            "default_network_acl_id": "acl-00645eb04c4f29bf0",
            "default_route_table_id": "rtb-009d940d15dca9582",
            "default_security_group_id": "sg-05ea0c9fbf1cb6974",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-076854025b60a2a30",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-009d940d15dca9582",
            "owner_id": "135928476890",
            "tags": {
              "Name": "aehussey-vpc"
            }
          }
        }
      ]
    }
  ]
}